tests/errors/surf_lex_03.ki
# LEXER: a raw single-quoted string ending in a lone backslash escapes its own closing quote
var s = r'C:\path\'